# retiralo

./: .gitignore  .pre-commit-config.yaml  AGENT.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: lint.yml  test.yml
agents/: retiralo.md
scripts/: bootstrap_env.py  generate_qr.py  list_kapso_phones.py  poll_inbox.py  send_whatsapp.py  setup_inbox.py
skills/extract-tracking/: SKILL.md
skills/generate-qr/: SKILL.md
skills/inbox-poll/: SKILL.md
skills/send-whatsapp/: SKILL.md
skills/setup/: SKILL.md
tests/: test_bootstrap_env.py  test_generate_qr.py  test_list_kapso_phones.py  test_poll_inbox.py  test_send_whatsapp.py  test_setup_inbox.py
