[project]
name = "retiralo"
version = "0.1.0"
description = "Agent that watches MercadoLibre pickup emails and relays the Andreani QR via WhatsApp"
authors = [{name = "Teo Sibileau"}]
requires-python = ">=3.12,<4.0"
dependencies = [
    "agentmail (>=0.0.1)",
    "python-dotenv (>=1.0.0)",
    "requests (>=2.31.0)",
    "typer (>=0.12.0)",
    "andreani-qr @ git+https://github.com/teosibileau/andreani-qr.git",
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
